# YANG-AGENT_CAD

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: ACCORE_TROUBLESHOOTING.md  ANTIGRAVITY.md  CAD_LOCAL_TESTS.md  DEVELOPMENT_ENV.md  ERROR_CODES.md  FEATURES.md  MCP.md  PROJECT_STATE.md  ROLLBACK.md  RUNTIME_CONTRACT.md  SAMPLE_DWGS.md  TOOLBOX_SPEC.md  USER_GUIDE.md  WORKPLAN.md
handoff/: CURRENT_HANDOFF.md
logs/worklog/: 2026-05-23.md  2026-05-24.md  2026-06-03.md  2026-06-04.md  2026-06-05.md
scripts/: current-com-diagnose.cmd  current-smoke-test.cmd  doctor.cmd  doctor.ps1  fix-acad-cfg.cmd  open-autocad-test.cmd  personal-health-check.cmd  python.ps1  test.cmd  test.ps1
src/yang_cad_agent/: __init__.py  acad_com_diagnose.py  acad_launch.py  accore.py  backup.py  batch_workflow.py  cli.py  current_lisp.py  current_smoke.py  doctor.py  error_codes.py  health_check.py  ledger.py  lisp_validator.py  log_diagnostics.py  mcp_manifest.py  mcp_stdio.py  personal_health.py  report_summary.py  task_query.py  toolbox.py
tests/: test_acad_com_diagnose.py  test_acad_launch.py  test_accore.py  test_backup.py  test_batch_workflow.py  test_cli_commands.py  test_current_lisp.py  test_current_smoke.py  test_doctor.py  test_error_codes.py  test_health_check.py  test_ledger.py  test_lisp_validator.py  test_log_diagnostics.py  test_mcp_manifest.py  test_mcp_stdio.py  test_personal_health.py  test_report_summary.py  test_task_query.py  test_toolbox.py
toolbox/plugins/batch_annotation_report/: main.lsp  plugin.json
toolbox/plugins/batch_smoke/: main.lsp  (+1 more)
(+10 files in other folders)
